News
====

.. contents::

svn trunk
---------

* paste.httpheaders now parses the HTTP Accept-Language header and returns
  a list of languages the browser supports in the order it prefers them.

* paste.mimeparse module added that handles parsing HTTP Accept headers
  for quality and mime-types.

* ``paste.request.construct_url`` was adding ``SERVER_PORT`` to
  ``HTTP_HOST``; but ``HTTP_HOST`` (from the Host header) generally
  contains a port when necessary, and ``SERVER_PORT`` should only be
  used with ``SERVER_NAME``.

* Added entry point for ``paste.registry.RegistryManager``
  (``egg:Paste#registry``).

* ``paste.request.HeaderDict`` fixed to know that ``Content-Length``
  maps to ``CONTENT_LENGTH``.

* Can use ``paste.urlparser.StaticURLParser`` with sub-instances other
  than ``paste.fileapp.FileApp`` (if you subclass and override
  ``make_app``)

* ``paste.fixture.TestApp.get(status=X)`` takes a list of allowed
  status codes for ``X``.

* Added a small templating system for internal use (``paste.util.template``)

* Removed a bunch of long-deprecated modules (generally modules that
  have been moved to other names).

In paste.wsgiwrappers
~~~~~~~~~~~~~~~~~~~~~

* ``paste.wsgiwrappers.WSGIRequest`` has match_accept() function to screen
  incoming HTPT Accept values against a list of mime-types.

* ``paste.wsgiwrappers.WSGIRequest.defaults`` now accepts a new key:

  ``language``: 
    The i18n language that should be used as the fallback should
    a translation not occur in a language file. See docs for
    details.

* ``paste.wsgiwrappers.WSGIRequest`` can now optionally decode form
  parameters to unicode when it has a ``charset`` value set.

* Deprecated the ``paste.wsgiwrappers.settings`` StackedObjectProxy
  dictionary for ``paste.wsgiwrappers.WSGIResponse.defaults``.

In paste.httpserver
~~~~~~~~~~~~~~~~~~~

* Regression in 1.1 fixed, where Paste's HTTP server would drop
  trailing slashes from paths.
